# oop_exercise_08

./: CMakeLists.txt  Source.cpp  Subscriber.cpp  Subscriber.h  figure.cpp  figure.h  point.cpp  point.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  trapezoid.cpp  trapezoid.h  vector.h
